--- a/index.html
+++ b/index.html
@@ -3,21 +3,68 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Exotic Gum!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
 
 <body>
-    <div>
-        <h1>
-            Brujjjhhgghgh
-        </h1>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">
+          <div class="logo-image">
+              <img src="Exotic gum logo.png" class="img-fluid">
+              </div>
+        </a>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="About.html">About us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="buy.html">Buy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Specialties.html">Specialties</a>
+          <li class="nav-item">
+            <a class="nav-link" href="Contacts.html">Contacts</a>
+            </li>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Continents
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
+              <li><a class="dropdown-item" href="Americas.html">Americas</a></li>
+              <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
+              <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
+            </ul>
+          </li>
+          </div>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
+  </nav>
+
+  <break></break>
+   
+  <div>
+    <img id="homeimg" src="https://th.bing.com/th/id/OIP.z1Bs2qEoaDp8uU7f84HCZwHaE-?pid=ImgDet&rs=1" alt="">
+  </div>
 </body>
     
