--- a/index.html
+++ b/index.html
@@ -18,46 +18,65 @@
 </head>
 
 <body>
-  <section class="navbar-class">
-    <nav class="navbar fixed-top bg-body-tertiary navbar-class">
-      <div class="container-fluid col-sm-12 justify-content-start">
-        <div class="col-sm-1">
-          <a class="navbar-brand" href="#">
-            <img src="/images/logo.png" width="75" height="75">
-          </a>
-        </div>
-        <div class="col-sm-3 offset-sm-1">
-          <form class="d-flex justify-content-end" role="search">
-            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-          </form>
-        </div>
-        <div class="dropdown col-sm-2 offset-sm-1">
-          <button class="btn dropdown-toggle continents-button-class" type="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Continents!
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Africa</a></li>
-            <li><a class="dropdown-item" href="#">Asia</a></li>
-            <li><a class="dropdown-item" href="#">Australia</a></li>
-            <li><a class="dropdown-item" href="#">Europe</a></li>
-            <li><a class="dropdown-item" href="#">North America</a></li>
-            <li><a class="dropdown-item" href="#">South America</a></li>
+  <nav class="navbar navbar-expand-md navbar-class fixed-top">
+    <div class="container-fluid">
+      <div class="col-sm-1 justify-content-start">
+        <a class="navbar-brand" href="#">
+          <img src="/images/logo.png" width="75" height="75">
+        </a>
+      </div>
+      <div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="col-sm-11 ps-2 container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="ms-3 col-sm-12">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              </form>
+            </div>
+          </ul>
+          <ul class="navbar-nav  mb-2 mb-lg-0">
+            <li class="nav-item">
+              <button>
+                <a class="nav-link" href="#">About Us!</a>
+              </button>
+            </li>
+            <li class="nav-item">
+              <button>
+                <a class="nav-link" href="#">Specialty Gums!</a>
+              </button>
+            </li>
+          </ul>
+          <ul class="navbar-nav  mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Continents!
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Africa</a></li>
+                <li><a class="dropdown-item" href="#">Asia</a></li>
+                <li><a class="dropdown-item" href="#">Australia</a></li>
+                <li><a class="dropdown-item" href="#">Europe</a></li>
+                <li><a class="dropdown-item" href="#">North America</a></li>
+                <li><a class="dropdown-item" href="#">South America</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
-        <div class="button-class col-sm-2 offset-sm-1">
-          <button type="button" class="btn about-us-button-class">About Us!</button>
-        </div>
-        <div class="button-class col-sm-1">
-          <button type="button" class="btn btn-primary"><img src=""></button>
-        </div>
-
       </div>
-    </nav>
 
-  </section>
+    </div>
+  </nav>
 
-  <hr>
+  <br>
+
+
   <section>
     <div class="container-fluid">
       <div id="carouselExampleIndicators" class="carousel slide">
@@ -94,15 +113,24 @@
     </div>
   </section>
 
-  <section class="pt-2 px-5">
+  <section>
     <div class="container-fluid">
-      <div class="col-lg-6">
+      <div class="col-sm-4">
         <h1>bruh</h1>
       </div>
-      <div class="col-lg-6">
+      <div class="col-sm-4">
+        <h1>bruh again</h1>
+      </div>
+      <div class="col-sm-4">
         <h1>image</h1>
       </div>
     </div>
+  </section>
+
+  <section>
+    <span>
+      
+    </span>
   </section>
 
   <section>
