--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
       <div class="col-sm-1 justify-content-start">
         <a class="navbar-brand" href="#">
-          <img src="/images/logo.png" width="75" height="75">
+          <img src="/images/logo.png" width="100" height="100">
         </a>
       </div>
       <div>
@@ -35,36 +35,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <div class="ms-3 col-sm-12">
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <form class="d-flex search-class" role="search">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
               </form>
             </div>
           </ul>
           <ul class="navbar-nav  mb-2 mb-lg-0">
             <li class="nav-item">
-              <button>
-                <a class="nav-link" href="#">About Us!</a>
-              </button>
+              <a class="nav-link mx-2 btn btn-outline-light" href="About.html">About Us!</a>
             </li>
             <li class="nav-item">
-              <button>
-                <a class="nav-link" href="#">Specialty Gums!</a>
-              </button>
+              <a class="nav-link mx-2 btn btn-outline-light" href="Specialties.html">Specialty Gums!</a>
             </li>
           </ul>
-          <ul class="navbar-nav  mb-2 mb-lg-0">
+          <ul class="navbar-nav mx-2 mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle btn btn-outline-light" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Continents!
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Africa</a></li>
-                <li><a class="dropdown-item" href="#">Asia</a></li>
-                <li><a class="dropdown-item" href="#">Australia</a></li>
-                <li><a class="dropdown-item" href="#">Europe</a></li>
-                <li><a class="dropdown-item" href="#">North America</a></li>
-                <li><a class="dropdown-item" href="#">South America</a></li>
+                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
+                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
+                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
+                <li><a class="dropdown-item" href="North America.html">North America</a></li>
+                <li><a class="dropdown-item" href="South America.html">South America</a></li>
               </ul>
             </li>
           </ul>
@@ -73,9 +68,6 @@
 
     </div>
   </nav>
-
-  <br>
-
 
   <section>
     <div class="container-fluid">
@@ -113,43 +105,54 @@
     </div>
   </section>
 
+  <br>
+
   <section>
-    <div class="container-fluid">
-      <div class="col-sm-4">
-        <h1>bruh</h1>
-      </div>
-      <div class="col-sm-4">
-        <h1>bruh again</h1>
-      </div>
-      <div class="col-sm-4">
-        <h1>image</h1>
+    <div class="container-fluid row justify-content-center">
+      <div>
+        <div class="col-sm-5">
+          <h1>bruh</h1>
+        </div>
+        <div class="col-sm-7">
+          <h1>bruh again</h1>
+        </div>
       </div>
     </div>
   </section>
+
+
 
   <section>
     <span>
-      
+
     </span>
   </section>
 
-  <section>
-    <div class="container-fluid">
-      <div style="text-align:center;">
-        <h1>Reviews</h1>
+  <section class="ourmission">
+    <div class="container-fluid row justify-content-center">
+      <div class="col-sm-6">
+        <img src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" alt="">
       </div>
-
-
-      <div>
-        <h1 style="text-align: left">
-          test
-        </h1>
-        <h1 style="text-align: right">
-          test
-        </h1>
+      <div class="col-sm-6">
+        <h1>bruh again</h1>
       </div>
     </div>
-
+    <div class="container-fluid row justify-content-center">
+      <div class="col-sm-6">
+        <h1>burh again</h1>
+      </div>
+      <div class="col-sm-6">
+        <img src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" alt="">
+      </div>
+    </div>
+    <div class="container-fluid row justify-content-center">
+      <div class="col-sm-6">
+        <img src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" alt="">
+      </div>
+      <div class="col-sm-6">
+        <h1>bruh again</h1>
+      </div>
+    </div>
   </section>
 
 
