--- a/buy.html
+++ b/buy.html
@@ -1,1 +1,76 @@
-<h1> Test </h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Andrew Ellis, Johnny Martinez, Champ Nguyen">
+  <meta name="keywords" content="Gum, exotic flavors, Exotic Gum, World Gum">
+  <link rel="shortcut icon" href="/images/logo.png">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+  <title>Exotic Gum!</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md navbar-class fixed-top">
+    <div class="container-fluid">
+      <div class="col-sm-1 justify-content-start">
+        <a class="navbar-brand" href="#">
+          <img src="/images/logo.png" width="100" height="100">
+        </a>
+      </div>
+      <div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="col-sm-11 ps-2 container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="ms-3 col-sm-12">
+              <form class="d-flex search-class" role="search">
+                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+              </form>
+            </div>
+          </ul>
+          <ul class="navbar-nav  mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link mx-2 btn btn-outline-light" href="About.html">About Us!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2 btn btn-outline-light" href="Specialties.html">Specialty Gums!</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav mx-2 mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle btn btn-outline-light" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Continents!
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
+                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
+                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
+                <li><a class="dropdown-item" href="North America.html">North America</a></li>
+                <li><a class="dropdown-item" href="South America.html">South America</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </nav>
+    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+</script>
+
+</body>
