--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Andrew Ellis, Johnny Martinez, Champ Nguyen">
-  <meta name="keywords" content="">
-  <link rel="shortcut icon" href="">
+  <meta name="keywords" content="Gum, exotic flavors, Exotic Gum, World Gum">
+  <link rel="shortcut icon" href="/images/logo.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
