--- a/Specialties.html
+++ b/Specialties.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-md navbar-class fixed-top">
         <div class="container-fluid">
             <div class="col-sm-1 justify-content-start">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="/images/logo.png" width="100" height="100">
                 </a>
             </div>
@@ -71,7 +71,7 @@
     </nav>
     
     <Section>
-        <div class="container-fluid">
+        <div class="container-fluid parallax">
 
         </div>
     </Section>
