--- a/index.html
+++ b/index.html
@@ -107,18 +107,7 @@
 
   <br>
 
-  <section>
-    <div class="container-fluid row justify-content-center">
-      <div>
-        <div class="col-sm-5">
-          <h1>bruh</h1>
-        </div>
-        <div class="col-sm-7">
-          <h1>bruh again</h1>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
 
 
@@ -129,28 +118,18 @@
   </section>
 
   <section class="ourmission">
-    <div class="container-fluid row justify-content-center">
-      <div class="col-sm-6">
-        <img src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" alt="">
-      </div>
-      <div class="col-sm-6">
-        <h1>bruh again</h1>
-      </div>
-    </div>
-    <div class="container-fluid row justify-content-center">
-      <div class="col-sm-6">
-        <h1>burh again</h1>
-      </div>
-      <div class="col-sm-6">
-        <img src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" alt="">
-      </div>
-    </div>
-    <div class="container-fluid row justify-content-center">
-      <div class="col-sm-6">
-        <img src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" alt="">
-      </div>
-      <div class="col-sm-6">
-        <h1>bruh again</h1>
+    <div class="container-fluid">
+      <div class="col-sm-12">
+        <div class="row justify-content-center">
+          <div class="col-sm-6">
+            <img class="ourmission-img"
+              src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg"
+              alt="">
+          </div>
+          <div class="col-sm-6">
+            <h1>bruh again</h1>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -165,20 +144,20 @@
             <div class="card">
               <div class="card-body">
                 <p>
-                  <h5 class="card-title">
-                    Dine-in
-                  </h5>
-                  <p class="card-text">
-                    Have a look at the wide variety of food in our menu before you dine in!
-                  </p>
-                  <a href="Menu.html" class="btn btn-outline-light">
-                    Our Menu
-                  </a>
-                  <br>
-                  <h6 class="invisible">
-                    https://www.youtube.com/watch?v=dQw4w9WgXcQ
-                  </h6>
-                  <img class="card-img-top" src="./img/sushi.jpg" alt="Card image">
+                <h5 class="card-title">
+                  Dine-in
+                </h5>
+                <p class="card-text">
+                  Have a look at the wide variety of food in our menu before you dine in!
+                </p>
+                <a href="Menu.html" class="btn btn-outline-light">
+                  Our Menu
+                </a>
+                <br>
+                <h6 class="invisible">
+                  https://www.youtube.com/watch?v=dQw4w9WgXcQ
+                </h6>
+                <img class="card-img-top" src="./img/sushi.jpg" alt="Card image">
                 </p>
               </div>
             </div>
@@ -187,18 +166,18 @@
             <div class="card">
               <div class="card-body">
                 <p>
-                  <h5 class="card-title">
-                    Order Online
-                  </h5>
-                  <p class="card-text">
-                    Order Online from your home and pick up ready to go in our restaurant!
-                  </p>
-                  <a href="Order.html" class="btn btn-outline-light">
-                    Order Online
-                  </a>
-                  <br>
-                  <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
-                  <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
+                <h5 class="card-title">
+                  Order Online
+                </h5>
+                <p class="card-text">
+                  Order Online from your home and pick up ready to go in our restaurant!
+                </p>
+                <a href="Order.html" class="btn btn-outline-light">
+                  Order Online
+                </a>
+                <br>
+                <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
                 </p>
               </div>
             </div>
@@ -207,18 +186,18 @@
             <div class="card">
               <div class="card-body">
                 <p>
-                  <h5 class="card-title">
-                    Delivery
-                  </h5>
-                  <p class="card-text">
-                    Order from our online menu and have it delivered straight to your door!
-                  </p>
-                  <a href="Contact.html" class="btn btn-outline-light">
-                    Our Number
-                  </a>
-                  <br>
-                  <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
-                  <img class="card-img-top" src="./img/delivery.jpg" alt="Card image">
+                <h5 class="card-title">
+                  Delivery
+                </h5>
+                <p class="card-text">
+                  Order from our online menu and have it delivered straight to your door!
+                </p>
+                <a href="Contact.html" class="btn btn-outline-light">
+                  Our Number
+                </a>
+                <br>
+                <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                <img class="card-img-top" src="./img/delivery.jpg" alt="Card image">
                 </p>
               </div>
             </div>
@@ -232,7 +211,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-  </script>
+    </script>
 
 
 </body>
