--- a/About.html
+++ b/About.html
@@ -23,26 +23,27 @@
     <div class="input">
       <input type="text" placeholder="Search" id="mysearch">
     </div>
+    <span class="clear" onclick="document.getElementbyId
+    ('mysearch').value = ''"></span>
   </div>
 
+
+  <a href="index.html">sdf</a>
 
 
 
   <script>
     const icon = document.querySelector('.icon');
-    const Search = document.querySelector('.search');
+    const search = document.querySelector('.search');
     icon.onclick = function(){
-      Search.classList.toggle('active')
+      search.classList.toggle('active')
     }
   </script>
 
 
-
-<a href="index.html">bruh</a>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+</script>
 
 
 </body>
