--- a/index.html
+++ b/index.html
@@ -111,19 +111,85 @@
 
 
 
-  <section>
-    <span>
+  <section class ="special-card">
+    <div class="container-fluid">
+      <div class="card">
 
-    </span>
+        <div class="slide slide1">
+
+            <div class="content">
+
+                <div class="icon">
+
+                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="slide slide2">
+
+            <div class="content">
+
+                <h3>
+
+                    Hello there!
+
+                </h3>
+
+                <p>Trust yourself and keep going.</p>
+
+            </div>
+
+        </div>
+
+    </div><div class="card">
+
+      <div class="slide slide1">
+
+          <div class="content">
+
+              <div class="icon">
+
+                  <i class="fa fa-user-circle" aria-hidden="true"></i>
+
+              </div>
+
+          </div>
+
+      </div>
+
+      <div class="slide slide2">
+
+          <div class="content">
+
+              <h3>
+
+                  Hello there!
+
+              </h3>
+
+              <p>Trust yourself and keep going.</p>
+
+          </div>
+
+      </div>
+
+  </div>
+    </div>
   </section>
+
+
 
   <section class="ourmission">
     <div class="container-fluid">
       <div class="col-sm-12">
-        <div class="row justify-content-center">
-          <div class="col-sm-6">
+        <div class="row justify-content-left">
+          <div class="col-sm-3">
             <img class="ourmission-img"
-              src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg"
+              src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" 
               alt="">
           </div>
           <div class="col-sm-6">
