--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/gumcarousel.png" class="d-block w-100 h-40" alt="...">
+            <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/gumcarousel.png" class="d-block w-100 h-40" alt="...">
+            <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/gumcarousel.png" class="d-block w-100 h-40" alt="...">
+            <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -112,73 +112,7 @@
 
 
   <section class ="special-card">
-    <div class="container-fluid">
-      <div class="card">
-
-        <div class="slide slide1">
-
-            <div class="content">
-
-                <div class="icon">
-
-                    <i class="fa fa-user-circle" aria-hidden="true"></i>
-
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="slide slide2">
-
-            <div class="content">
-
-                <h3>
-
-                    Hello there!
-
-                </h3>
-
-                <p>Trust yourself and keep going.</p>
-
-            </div>
-
-        </div>
-
-    </div><div class="card">
-
-      <div class="slide slide1">
-
-          <div class="content">
-
-              <div class="icon">
-
-                  <i class="fa fa-user-circle" aria-hidden="true"></i>
-
-              </div>
-
-          </div>
-
-      </div>
-
-      <div class="slide slide2">
-
-          <div class="content">
-
-              <h3>
-
-                  Hello there!
-
-              </h3>
-
-              <p>Trust yourself and keep going.</p>
-
-          </div>
-
-      </div>
-
-  </div>
-    </div>
+    
   </section>
 
 
@@ -186,10 +120,10 @@
   <section class="ourmission">
     <div class="container-fluid">
       <div class="col-sm-12">
-        <div class="row justify-content-left">
-          <div class="col-sm-3">
+        <div class="justify-content-left row">
+          <div class="col-sm-6">
             <img class="ourmission-img"
-              src="https://www.travelandleisure.com/thmb/R2kb6GuJwF4wVJhRVevV-FqOVao=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/el-yunque-national-rainforest-tropical-puerto-rico-TROPICALPLANTS0617-d3ccb18a16064e42bdd626cdf7a8cb68.jpg" 
+              src="/images/fillersquare-1.png" 
               alt="">
           </div>
           <div class="col-sm-6">
@@ -199,6 +133,13 @@
       </div>
     </div>
   </section>
+
+
+
+
+
+
+
 
 
 
