--- a/About.html
+++ b/About.html
@@ -15,6 +15,9 @@
   <title>About Us!</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript">
+
+  </script>
 </head>
 
 <body>
