--- a/North America.html
+++ b/North America.html
@@ -20,9 +20,9 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-class fixed-top">
     <div class="container-fluid">
-      <div class="col-sm-1 justify-content-start">
+      <div class="col-sm-1 justify-content-sm-end">
         <a class="navbar-brand" href="index.html">
-          <img src="/images/logo.png" width="100" height="100">
+          <img src="/images/newlogo.png" width="100" height="100">
         </a>
       </div>
       <div>
@@ -31,41 +31,33 @@
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
-      <div class="col-sm-11 ps-2 container-fluid">
+      <div class="col-sm-11 ps-2 container-fluid justify-content-sm-end">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <div class="ms-3 col-sm-12">
-              <form class="d-flex search-class" role="search">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-              </form>
-            </div>
-          </ul>
-          <ul class="navbar-nav  mb-2 mb-lg-0">
+          <ul class="navbar-nav  mx-2 mb-2 mb-lg-0 ">
             <li class="nav-item">
-              <a class="nav-link mx-2 btn btn-outline-light" href="About.html">About Us!</a>
+              <a class="col-sm-2 nav-link mx-2 mb-2 btn btn-outline-light button-29" href="About.html">About Us!</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-2 btn btn-outline-light" href="Specialties.html">Specialty Gums!</a>
+              <a class="col-sm-2 nav-link mx-2 mb-2 btn btn-outline-light button-29" href="Our_gums.html">Our Gums!</a>
             </li>
-          </ul>
-          <ul class="navbar-nav mx-2 mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle btn btn-outline-light" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Continents!
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
-                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
-                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
-                <li><a class="dropdown-item" href="North America.html">North America</a></li>
-                <li><a class="dropdown-item" href="South America.html">South America</a></li>
-              </ul>
-            </li>
+            <ul class="navbar-nav mx-3 mb-2">
+              <li class="col-sm-2 nav-item dropdown">
+                <a class="nav-link dropdown-toggle btn btn-outline-light button-29" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Continents!
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
+                  <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
+                  <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
+                  <li><a class="dropdown-item" href="North America.html">North America</a></li>
+                  <li><a class="dropdown-item" href="South America.html">South America</a></li>
+                </ul>
+              </li>
+            </ul>
           </ul>
         </div>
       </div>
-
     </div>
   </nav>
     
