--- a/index.html
+++ b/index.html
@@ -15,61 +15,55 @@
   <title>Exotic Gum!</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://kit.fontawesome.com/1c0e6c2e01.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-class fixed-top">
-    <div class="container-fluid">
-      <div class="col-sm-1 justify-content-start">
-        <a class="navbar-brand" href="index.html">
-          <img src="/images/logo.png" width="100" height="100">
+
+  <!--This is the navbar-->
+
+  <section>
+    <nav class="navbar navbar-expand-sm navbar-class fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-auto" href="index.html">
+          <img src="/images/images/newlogo.png" class="logonav">
         </a>
-      </div>
-      <div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-      <div class="col-sm-11 ps-2 container-fluid">
+        div
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <div class="ms-3 col-sm-12">
-              <form class="d-flex search-class" role="search">
-                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-              </form>
-            </div>
-          </ul>
-          <ul class="navbar-nav  mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-2 mb-sm-0">
             <li class="nav-item">
-              <a class="nav-link mx-2 btn btn-outline-light" href="About.html">About Us!</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-2 btn btn-outline-light" href="Specialties.html">Specialty Gums!</a>
+              <a class="nav-link" href="#">Link</a>
             </li>
-          </ul>
-          <ul class="navbar-nav mx-2 mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle btn btn-outline-light" href="#" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Continents!
+                Dropdown
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
-                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
-                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
-                <li><a class="dropdown-item" href="North America.html">North America</a></li>
-                <li><a class="dropdown-item" href="South America.html">South America</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
           </ul>
         </div>
       </div>
+    </nav>
+  </section>
 
-    </div>
-  </nav>
 
-  <section>
+
+  <section class="carousel">
     <div class="container-fluid">
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
@@ -111,8 +105,8 @@
 
 
 
-  <section class ="special-card">
-    
+  <section class="special-card">
+
   </section>
 
 
@@ -122,9 +116,7 @@
       <div class="col-sm-12">
         <div class="justify-content-left row">
           <div class="col-sm-6">
-            <img class="ourmission-img"
-              src="/images/fillersquare-1.png" 
-              alt="">
+            <img class="ourmission-img" src="/images/fillersquare-1.png" alt="">
           </div>
           <div class="col-sm-6">
             <h1>bruh again</h1>
@@ -143,74 +135,121 @@
 
 
 
-  <section class="card-section homecards pt-2 px-5">
+
+
+
+
+
+
+
+  <section class="card-carousel pt-2 px-5">
     <div class="container-fluid">
-      <div class="row text-center">
-        <div class="card-group">
-          <div class="col-sm-4 px-2 py-2">
-            <div class="card">
-              <div class="card-body">
-                <p>
-                <h5 class="card-title">
-                  Dine-in
-                </h5>
-                <p class="card-text">
-                  Have a look at the wide variety of food in our menu before you dine in!
-                </p>
-                <a href="Menu.html" class="btn btn-outline-light">
-                  Our Menu
-                </a>
-                <br>
-                </p>
+      <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-4 px-2 py-2">
-            <div class="card">
-              <div class="card-body">
-                <p>
-                <h5 class="card-title">
-                  Order Online
-                </h5>
-                <p class="card-text">
-                  Order Online from your home and pick up ready to go in our restaurant!
-                </p>
-                <a href="Order.html" class="btn btn-outline-light">
-                  Order Online
-                </a>
-                <br>
-                </p>
+          <div class="carousel-item">
+
+            <div class="row">
+
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-sm-4 px-2 py-2">
-            <div class="card">
-              <div class="card-body">
-                <p>
-                <h5 class="card-title">
-                  Delivery
-                </h5>
-                <p class="card-text">
-                  Order from our online menu and have it delivered straight to your door!
-                </p>
-                <a href="Contact.html" class="btn btn-outline-light">
-                  Our Number
-                </a>
-                <br>
-                </p>
+
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                      card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </section>
 
 
+  <!--Back to Top button-->
+
+  <a href="#" class="b2t mx-auto"><i class="fas fa-chevron-up"></i></a>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+  </script>
 
 
 </body>
