--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
   <section class="ourmission">
-    <div class="container-fluid">
+    <div class="container-fluid"> 
       <div class="col-sm-12">
         <div class="justify-content-left row">
           <div class="col-sm-6">
@@ -148,38 +148,67 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row">
-              <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+              <div class="col-lg-4 px-2 py-2">
+                <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p>
+                      <h5 class="card-title">
+                        Delivery
+                      </h5>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
+                      <a href="Contact.html" class="btn btn-outline-light">
+                        Our Number
+                      </a>
+                      <br>
+                      <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                      <img class="card-img-top" src="./img/delivery.jpg" alt="Card image">
+                    </p>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+              <div class="col-lg-4 px-2 py-2">
+                <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p>
+                      <h5 class="card-title">
+                        Order Online
+                      </h5>
+                      <p class="card-text">
+                        Order Online from your home and pick up ready to go in our restaurant!
+                      </p>
+                      <a href="Order.html" class="btn btn-outline-light">
+                        Order Online
+                      </a>
+                      <br>
+                      <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                      <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
+                    </p>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+              <div class="col-lg-4 px-2 py-2">
+                <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p>
+                      <h5 class="card-title">
+                        Dine-in
+                      </h5>
+                      <p class="card-text">
+                        Have a look at the wide variety of food in our menu before you dine in!
+                      </p>
+                      <a href="Menu.html" class="btn btn-outline-light">
+                        Our Menu
+                      </a>
+                      <br>
+                      <h6 class="invisible">
+                        https://www.youtube.com/watch?v=dQw4w9WgXcQ
+                      </h6>
+                      <img class="card-img-top" src="./img/sushi.jpg" alt="Card image">
+                    </p>
                   </div>
                 </div>
               </div>
@@ -189,41 +218,71 @@
 
             <div class="row">
 
-              <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+              <div class="col-lg-4 px-2 py-2">
+                <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p>
+                      <h5 class="card-title">
+                        Delivery
+                      </h5>
+                      <p class="card-text">
+                        Order from our online menu and have it delivered straight to your door!
+                      </p>
+                      <a href="Contact.html" class="btn btn-outline-light">
+                        Our Number
+                      </a>
+                      <br>
+                      <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                      <img class="card-img-top" src="./img/delivery.jpg" alt="Card image">
+                    </p>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+              <div class="col-lg-4 px-2 py-2">
+                <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p>
+                      <h5 class="card-title">
+                        Order Online
+                      </h5>
+                      <p class="card-text">
+                        Order Online from your home and pick up ready to go in our restaurant!
+                      </p>
+                      <a href="Order.html" class="btn btn-outline-light">
+                        Order Online
+                      </a>
+                      <br>
+                      <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                      <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
+                    </p>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+              <div class="col-lg-4 px-2 py-2">
+                <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p>
+                      <h5 class="card-title">
+                        Dine-in
+                      </h5>
+                      <p class="card-text">
+                        Have a look at the wide variety of food in our menu before you dine in!
+                      </p>
+                      <a href="Menu.html" class="btn btn-outline-light">
+                        Our Menu
+                      </a>
+                      <br>
+                      <h6 class="invisible">
+                        https://www.youtube.com/watch?v=dQw4w9WgXcQ
+                      </h6>
+                      <img class="card-img-top" src="./img/sushi.jpg" alt="Card image">
+                    </p>
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
@@ -240,6 +299,44 @@
       </div>
     </div>
   </section>
+
+
+
+
+  <section class="card-section homecards pt-2 px-5">
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="card-group">
+          
+
+
+          <div class="col-sm-4 px-2 py-2">
+            <div class="card">
+              <div class="card-body">
+                <p>
+                  <h5 class="card-title">
+                    Order Online
+                  </h5>
+                  <p class="card-text">
+                    Order Online from your home and pick up ready to go in our restaurant!
+                  </p>
+                  <a href="Order.html" class="btn btn-outline-light">
+                    Order Online
+                  </a>
+                  <br>
+                  <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
+                  <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
+                </p>
+              </div>
+            </div>
+          </div>
+
+          
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
   <!--Back to Top button-->
