--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="Andrew Ellis, Johnny Martinez, Champ Nguyen">
   <meta name="keywords" content="Gum, exotic flavors, Exotic Gum, World Gum">
-  <link rel="shortcut icon" href="/images/logo.png">
+  <link rel="shortcut icon" href="/images/images/newlogo.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -23,7 +23,7 @@
   <!--This is the navbar-->
 
   <section>
-    <nav class="navbar navbar-expand-sm navbar-class fixed-top">
+    <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand ms-auto" href="index.html">
           <img src="/images/images/newlogo.png" class="logonav">
@@ -32,28 +32,31 @@
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        div
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav ">
+            <li class="nav-item dropdown px-2">
+              <a class="nav-link dropdown-toggle btn button-29" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Dropdown
+                Continents
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="Africa.html">Africa</a></li>
+                <li><a class="dropdown-item" href="Asia.html">Asia</a></li>
+                <li><a class="dropdown-item" href="Europe.html">Europe</a></li>
+                <li><a class="dropdown-item" href="North America.html">North America</a></li>
+                <li><a class="dropdown-item" href="Oceania.html">Oceana</a></li>
+                <li><a class="dropdown-item" href="South America.html">South America</a></li>
               </ul>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link btn button-29" href="Specialties.html">
+                Specialty Gums
+              </a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link btn button-29" href="About.html">
+                About Us
+              </a>
             </li>
           </ul>
         </div>
@@ -76,13 +79,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
+            <img src="/images/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
+            <img src="/images/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
+            <img src="/images/images/ArsenalFillerIMG-1.png" class="d-block w-100 h-40" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -112,7 +115,7 @@
 
 
   <section class="ourmission">
-    <div class="container-fluid"> 
+    <div class="container-fluid">
       <div class="col-sm-12">
         <div class="justify-content-left row">
           <div class="col-sm-6">
@@ -139,7 +142,7 @@
 
 
 
-
+  <!--Beginning of carousel-->
 
 
   <section class="card-carousel pt-2 px-5">
@@ -147,6 +150,16 @@
       <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <div class="row">
+
+              <div class="card-names">
+                <div class="row">
+                  <div class="col-sm-12 text-center">
+                  <h1>Highest Rated!</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <div class="col-lg-4 px-2 py-2">
                 <div class="card">
@@ -217,6 +230,12 @@
           <div class="carousel-item">
 
             <div class="row">
+
+              <div class="card-names">
+                <div class="align-content-center justify-content-center">
+                  <h1>Most Popular!</h1>
+                </div>
+              </div>
 
               <div class="col-lg-4 px-2 py-2">
                 <div class="card">
@@ -300,44 +319,60 @@
     </div>
   </section>
 
+  <!--End of card carousel-->
 
 
+  <!--Beginning of footer-->
 
-  <section class="card-section homecards pt-2 px-5">
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="card-group">
-          
+  <section class="footer-section">
 
+    <footer>
+      <div class="container-fluid">
+        <br>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <h2 class="footer-head">Follow Us</h2>
 
-          <div class="col-sm-4 px-2 py-2">
-            <div class="card">
-              <div class="card-body">
-                <p>
-                  <h5 class="card-title">
-                    Order Online
-                  </h5>
-                  <p class="card-text">
-                    Order Online from your home and pick up ready to go in our restaurant!
-                  </p>
-                  <a href="Order.html" class="btn btn-outline-light">
-                    Order Online
-                  </a>
-                  <br>
-                  <h6 class="invisible">https://www.youtube.com/watch?v=dQw4w9WgXcQ</h6>
-                  <img class="card-img-top" src="./img/ordering.jpg" alt="Card image">
-                </p>
-              </div>
-            </div>
+            Follow us on our Social Medias to keep up with recent news from the restaurant!
+
+            <br>
+            <br>
+
+            <a href="https://www.facebook.com/Sakura-Japanese-Restaurant-367551639982061/">
+
+              <img src="./img/facebook.png" height="50px">
+
+            </a>
+
           </div>
+          <div class="col-md-4">
 
-          
+            <br>
+            <a href="#top">
+              <img src="./img/LOGO1.png " height="150px">
+            </a>
+            <br>
+          </div>
+          <div class="col-md-4 ">
+
+            <h2 class="footer-head">Find Us</h2>
+
+            Our location!
+            <br>
+            70 Carriage House Dr
+            <br>
+            Jackson TN
+            38305
+            <br>
+            (731) 664-2878
+
+          </div>
         </div>
-      </div>
-    </div>
+        <br>
+    </footer>
   </section>
 
-
+<!--End of footer-->
 
   <!--Back to Top button-->
 
